--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id "io.qameta.allure" version "2.9.6"
 }
 
 repositories {
@@ -10,7 +11,8 @@ dependencies {
     testImplementation (
             "com.codeborne:selenide:6.16.0",
             "org.slf4j:slf4j-simple:1.7.29",  // удаление лишних логов в консоли
-            "org.junit.jupiter:junit-jupiter:5.9.3") //библиотека JUnit 5
+            "org.junit.jupiter:junit-jupiter:5.9.3", //библиотека JUnit 5
+            "io.qameta.allure:allure-selenide:2.17.3")
 }
 
 tasks.withType(JavaCompile) {
@@ -19,4 +21,18 @@ tasks.withType(JavaCompile) {
 
 test {
     useJUnitPlatform()
+}
+
+allure {
+    report {
+        version.set("2.17.3") //версия Allure Report (https://github.com/allure-framework/allure2)
+    }
+    adapter {
+        aspectjWeaver.set(true) // обработка аннотации @Step
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.17.3") //версия Allure JUnit5 (https://github.com/allure-framework/allure-java)
+            }
+        }
+    }
 }
