--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,8 +21,8 @@ jobs:
         uses: actions/checkout@v2
         if: always()
         with:
-          ref: gh-pages
-          path: gh-pages
+          ref: github_actions
+          path: github_actions
       - name: Build Report
         uses: simple-elf/allure-report-action@master
         if: always()
