--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,5 +35,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
+          PUBLISH_BRANCH: github_actions
           PUBLISH_DIR: allure-history
