--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,7 @@ jobs:
           java-version: '17'
 
       - uses: Xotabu4/selenoid-github-action@v2
+      - run: dos2unix gradlew
       - run: ./gradlew clean test
       - name: Copy History
         uses: actions/checkout@v2
