--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,8 +16,16 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      - uses: Xotabu4/selenoid-github-action@v2
-      - run: ./gradlew clean test
+      - name: Start selenoid
+        uses: Xotabu4/selenoid-github-action@v2
+      - uses: actions/checkout@v1
+      - run: npm ci
+      - name: Run tests
+        run: npm test
+
+#      - uses: Xotabu4/selenoid-github-action@v2
+#      - run: ./gradlew clean test
+
       - name: Copy History
         uses: actions/checkout@v2
         if: always()
