--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Start selenoid
         uses: Xotabu4/selenoid-github-action@v2
       - name: Run tests
-        run: ./gradlew clean test
+        run: ./gradlew test
 
       - name: Copy History
         uses: actions/checkout@v2
