--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java-library'
-    id 'io.qameta.allure' version '2.9.6'
 }
 
 
@@ -11,8 +10,7 @@ repositories {
 dependencies {
     testImplementation (
             "com.codeborne:selenide:7.0.4",
-            "org.junit.jupiter:junit-jupiter:5.9.3",
-            "io.qameta.allure:allure-selenide:2.21.0")
+            "org.junit.jupiter:junit-jupiter:5.9.3")
 }
 
 tasks.withType(JavaCompile) {
