refactor ui tests

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testImplementation (
             "com.codeborne:selenide:7.0.4",
             "org.junit.jupiter:junit-jupiter:5.9.3",
+            "io.qameta.allure:allure-junit4:2.27.0",
             "io.rest-assured:rest-assured:5.4.0")
 }
 
