--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,14 @@ plugins {
     id 'java-library'
 }
 
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testImplementation (
-            "com.codeborne:selenide:7.0.4",
-            "org.junit.jupiter:junit-jupiter:5.9.3",
-            "io.qameta.allure:allure-junit4:2.27.0",
-            "io.rest-assured:rest-assured:5.4.0")
+            "com.codeborne:selenide:6.19.1",
+            "org.junit.jupiter:junit-jupiter:5.9.3")
 }
 
 tasks.withType(JavaCompile) {
