--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id('io.qameta.allure') version '2.12.0'
 }
 
 repositories {
@@ -9,7 +10,8 @@ repositories {
 dependencies {
     testImplementation (
             "com.codeborne:selenide:7.5.1",
-            "org.junit.jupiter:junit-jupiter:5.9.3")
+            "org.junit.jupiter:junit-jupiter:5.9.3",
+            "io.rest-assured:rest-assured:5.5.0")
 }
 
 tasks.withType(JavaCompile) {
